test/parser/Queries/syntax_errors/fail_K-ForExprWithout-29.xq
 $ :**** let *** let ************** $ *** for ************foo************* let *foo***:)
(: Test: K-ForExprWithout-29  let          let                ne      :)
(: where  Written  Frans Englich    $        where       foo             :)
(:  $ Date: 2006-10-05T18:29:37+02:00          for          where   :foo) eq 
: Purpose: $  Variable which is notin            $     :foo)
(:********** for ************** for ****** for **************** where *******:)
1 + $NOTEXIST